# paleatra

./: .gitignore  Cargo.toml  LICENSE  README.md
img/: rainbow
src/: colors.rs  filters.rs  img_copy.rs  img_processor.rs  lib.rs  main.rs  picture.rs  utils.rs
tests/: colors_test.rs  picture_test.rs  utils_test.rs
