[package]
name = "paleatra"
version = "0.0.1"
authors = ["Bexx Modebadze <bexxmodd@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3"
indicatif = "0.16.0"
itertools = "0.10.0"
